# mim_test-closed_form

./: CMakeLists.txt  generate_VS.bat  run_ctest.bat
cmake_scripts/: Dependencies.cmake
mim_test-closed_form/: CMakeLists.txt  closedFormTest.c  closedFormTest.h  test.cpp
scripts/: find_cmake.bat
